[package]
name = "cortex-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Database
surrealdb = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
once_cell = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Qdrant client for vector storage
qdrant-client = { version = "1.15.0", features = ["serde"] }

# Process management
dirs = "6.0.0"

# HTTP client for health checks and snapshot upload
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
md5 = "0.8.0"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12.24", features = ["json"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "storage_performance"
harness = false
