[package]
name = "cortex-vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
cortex-core = { path = "../cortex-core" }
cortex-storage = { path = "../cortex-storage" }
cortex-code-analysis = { path = "../cortex-code-analysis" }
cortex-memory = { path = "../cortex-memory" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File watching
notify = { workspace = true }
ignore = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Text processing
similar = "2.7.0"

# Utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
filetime = "0.2.26"
num_cpus = "1.17.0"
lru = "0.16.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "vfs_bench"
harness = false

[[bench]]
name = "vfs_performance"
harness = false
