[package]
name = "claude-sdk-rs"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/bredmond1019/claude-sdk-rust"
homepage = "https://github.com/bredmond1019/claude-sdk-rust"
documentation = "https://docs.rs/claude-sdk-rs"
authors = ["Brandon Redmond <brandon@github.com>"]
description = "Rust SDK for Claude AI - type-safe async API for Claude Code and direct SDK usage"
keywords = ["claude", "anthropic", "ai", "sdk", "async"]
categories = ["api-bindings"]
readme = "README.md"


[dependencies]
# Core dependencies (always available)
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Runtime dependencies  
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
which = "6.0"
parking_lot = "0.12"
rand = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
libc = "0.2"

# Core optional dependencies
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

# MCP dependencies (optional)
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
base64 = { version = "0.22", optional = true }
prometheus = { version = "0.14", optional = true }

[dev-dependencies]
proptest = "1.5"
insta = "1.40"
wiremock = "0.6"
dotenvy = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = []

# Storage features
sqlite = ["dep:sqlx"]

# MCP features
mcp = [
    "dep:tokio-util",
    "dep:futures-util",
    "dep:tokio-tungstenite",
    "dep:base64",
    "dep:prometheus"
]

# All features enabled
full = ["mcp", "sqlite"]

# Benchmarks
[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]